--- a/jira-custom-field/src/main/resources/templates/customfields/link-custom-field/view.vm
+++ b/jira-custom-field/src/main/resources/templates/customfields/link-custom-field/view.vm
@@ -1,3 +1,7 @@
 #if ($value)
-<a href="$!value.url">$!value.title</a>
+    #if($newWindow)
+        <a href="$!value.url" target="_blank">$!value.title</a>
+    #else
+        <a href="$!value.url">$!value.title</a>
+    #end
 #end
